@@ -4,7 +4,7 @@ galaxy_info:
     - Alban Espié-Guillon
   description:
   license: MIT
-  min_ansible_version: 2.4
+  min_ansible_version: 2.5
   platforms:
     - name: Debian
       versions:
